[package]
name = "fastest_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
reqwest = { version = "0.12", features = ["stream"] } # Use 0.12 or latest 0.11
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = "2.5" # For URL parsing and validation
futures-util = "0.3" # For stream mapping
